--- a/spring-boot/Dockerfile
+++ b/spring-boot/Dockerfile
@@ -1,7 +1,6 @@
 FROM openjdk:8-jdk-alpine
 LABEL maintainer="jh_kim@emro.co.kr"
 VOLUME /tmp
+ADD ./build/libs/spring-boot-0.0.1-SNAPSHOT.jar to-do-springboot.jar
 EXPOSE 8080
-ARG JAR_FILE=./build/libs/spring-boot-0.0.1-SNAPSHOT.jar
-ADD ${JAR_FILE} to-do-springboot.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/to-do-springboot.jar"]
