--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -30,6 +30,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		// https://mvnrepository.com/artifact/junit/junit
+		testCompile group: 'junit', name: 'junit', version: '4.12'
+		
+	}
 
 }
 
