--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-	git poll: true, url: 'https://github.com/zalkdo/spring.git'
+	git poll:true, branch: 'master', credentialsId: 'github', url: 'https://github.com/zalkdo/spring.git'
 
     withCredentials([[$class: 'UsernamePasswordMultiBinding',
         credentialsId:'dockerhub',
