--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -20,15 +20,24 @@ node {
            }
            */
            stage('Docker') {
-            /*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
-            def customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot") 
-           }
-           stage('Push'){
-           	   customImage.push()
-               customImage.push('latest')
+				/*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
+				step('Build'){
+					def customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")    
+				}
+				step('Push'){
+				   customImage.push()
+				   customImage.push('latest')
+				}
            }
            stage('Deploy') {
-        
+        		try{
+        		    
+        		    sh(script: 'docker stop ${DOCKER_USER_ID}/spring-boot')
+        		    sh(script: 'docker rm ${DOCKER_USER_ID}/spring-boot')
+        		} catch(e) {
+        		      echo "No ${DOCKER_USER_ID}/spring-boot container exists"
+        		}
+				sh(script : '''docker run -d -p 80:8080 --name ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}''')
            }
         }
 
