--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -5,6 +5,7 @@ node {
         credentialsId:'dockerhub',
         usernameVariable: 'DOCKER_USER_ID',
         passwordVariable: 'DOCKER_USER_PASSWORD']]){
+           def customImage;
            stage('Pull') { // for display purposes
               git branch: 'master', credentialsId: 'github', url: 'https://github.com/zalkdo/spring.git'
            }
@@ -19,14 +20,17 @@ node {
                sh(script: 'docker-compose run --rm unit')
            }
            */
-           stage('Docker') {
+           stage('Build') {
 				/*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
-				def customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")    
-
-			   customImage.push()
-			   customImage.push('latest')
-
+			   customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")    
            }
+           stage('Push'){
+           	   docker.withRegistry("https://registry.hub.docker.com", "dockerhub"){
+				   customImage.push()
+				   customImage.push('latest')           	       
+           	   }
+           }
+
            stage('Deploy') {
         		try{
         		    
