--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -23,7 +23,9 @@ node {
            stage('Build') {
 				/*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
 			   //customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")
-			   sh(script: 'docker-compose build app')
+			   dir('spring-boot'){
+			   	sh(script: 'docker-compose build app')
+			   }
            }
            stage('Tag'){
                sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}')               
@@ -37,7 +39,9 @@ node {
            }
 
            stage('Deploy') {
-           		sh(script: 'docker-compose up -d production')
+           		dir('spring-boot'){
+           			sh(script: 'docker-compose up -d production')    
+           		}
         		/*try{
         		    sh(script: 'docker stop spring-boot')
         		    sh(script: 'docker rm spring-boot')
