--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+    build: .
     image: ${DOCKER_USER_ID}/spring-boot
   production:
     volumns:
