--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -9,4 +9,5 @@ services:
       - /tmp
     ports:
       - 80:8080
-    command: ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/to-do-springboot.jar"]
+    container_name: spring-boot
+    command: ["bash", "-c", "java -Djava.security.egd=file:/dev/./urandom -jar /to-do-springboot.jar"]
