--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     image: ${DOCKER_USER_ID}/spring-boot
   production:
-    volumns:
+    volumes:
       - /tmp
     ports:
       - 80:8080
