추가 image: ${DOCKER_USER_ID}/spring-boot

--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     image: ${DOCKER_USER_ID}/spring-boot
   production:
+    image: ${DOCKER_USER_ID}/spring-boot
     volumes:
       - /tmp
     ports:
