--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -33,6 +33,7 @@ node {
 
            stage('Push'){
            	   dir('spring-boot'){
+           	   	sh(script: 'docker login')
 			   	sh(script: 'docker-compose push app')
 			   }
            /*
