--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -3,11 +3,12 @@ version: '3'
 services:
   app:
     build: .
-    image: ${DOCKER_USER_ID}/spring-boot
+    image: ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}
   production:
-    image: ${DOCKER_USER_ID}/spring-boot
+    image: ${DOCKER_USER_ID}/spring-boot:latest
     volumes:
       - /tmp
+    restart: always
     ports:
       - 80:8080
     container_name: spring-boot
