--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -28,7 +28,7 @@ node {
 			   }
            }
            stage('Tag'){
-               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}')               
+               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:latest')               
            }
 
            stage('Push'){
