entrypoint 살리고 command삭제.

--- a/spring-boot/Dockerfile
+++ b/spring-boot/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8-jdk-alpine
 LABEL maintainer="jh_kim@emro.co.kr"
 ADD ./build/libs/spring-boot-0.0.1-SNAPSHOT.jar to-do-springboot.jar
 EXPOSE 8080
-#ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/to-do-springboot.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/to-do-springboot.jar"]
