--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -24,18 +24,18 @@ node {
 				/*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
 			   //customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")
 			   dir('spring-boot'){
-			   	sh(script: 'docker-compose build app')
+			   	sh(script: 'docker-compose build --force-rm=true app')
 			   }
            }
            stage('Tag'){
-               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:latest')               
+               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}')               
            }
 
            stage('Push'){
            	   dir('spring-boot'){
            	   	sh(script: 'docker login -u ${DOCKER_USER_ID} -p ${DOCKER_USER_PASSWORD}')
 			   	sh(script: 'docker-compose push app')
-			   	sh(script: 'docker-compose push latest')
+			   	sh(script: 'docker-compose push tag')
 			   }
            /*
            	   docker.withRegistry("https://registry.hub.docker.com", "dockerhub"){
