--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -3,10 +3,9 @@ version: '3'
 services:
   app:
     build: .
-    image: ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}
-  latest:
-    build: .
     image: ${DOCKER_USER_ID}/spring-boot:latest
+  tag:
+    image: ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}
   production:
     image: ${DOCKER_USER_ID}/spring-boot:latest
     volumes:
