--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -24,7 +24,7 @@ node {
 				/*sh(script: 'docker build --force-rm=true -t ${DOCKER_USER_ID}/spring-boot:latest . ')*/
 			   //customImage = docker.build("${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}","spring-boot")
 			   dir('spring-boot'){
-			   	sh(script: 'docker-compose build --force-rm=true app')
+			   	sh(script: 'docker-compose build --force-rm app')
 			   }
            }
            stage('Tag'){
