--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -1,4 +1,5 @@
 node {
+	try {
 	git poll:true, branch: 'master', credentialsId: 'github', url: 'https://github.com/zalkdo/spring.git'
 
     withCredentials([[$class: 'UsernamePasswordMultiBinding',
@@ -59,6 +60,18 @@ node {
 				*/
            }
         }
+	} catch (e) {
+	    // If there was an exception thrown, the build failed
+	    currentBuild.result = "FAILED"
+	    throw e
+  	} finally {
+		// Success or failure, always send notifications
+    	notifyBuild(currentBuild.result)
+  	}
+
+
+
+/*
     post {
         success {
             slackSend (color: '#00FF00', message: "SUCCESSFUL: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
@@ -67,5 +80,31 @@ node {
             slackSend (color: '#FF0000', message: "FAILED: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]' (${env.BUILD_URL})")
         }
     }
+*/
+}
 
+def notifyBuild(String buildStatus = 'STARTED') {
+  // build status of null means successful
+  buildStatus =  buildStatus ?: 'SUCCESSFUL'
+
+  // Default values
+  def colorName = 'RED'
+  def colorCode = '#FF0000'
+  def subject = "${buildStatus}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'"
+  def summary = "${subject} (${env.BUILD_URL})"
+
+  // Override default values based on build status
+  if (buildStatus == 'STARTED') {
+    color = 'YELLOW'
+    colorCode = '#FFFF00'
+  } else if (buildStatus == 'SUCCESSFUL') {
+    color = 'GREEN'
+    colorCode = '#00FF00'
+  } else {
+    color = 'RED'
+    colorCode = '#FF0000'
+  }
+
+  // Send notifications
+  slackSend (color: colorCode, message: summary)
 }
