--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     build: .
-    image: ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}
+    image: ${DOCKER_USER_ID}/spring-boot:latest
   production:
     image: ${DOCKER_USER_ID}/spring-boot:latest
     volumes:
