--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -29,12 +29,13 @@ node {
 			   }
            }
            stage('Tag'){
-               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}')               
+               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER} ${DOCKER_USER_ID}/spring-boot:latest')               
            }
 
            stage('Push'){
            	   dir('spring-boot'){
            	   	sh(script: 'docker login -u ${DOCKER_USER_ID} -p ${DOCKER_USER_PASSWORD}')
+			   	sh(script: 'docker-compose push tag')
 			   	sh(script: 'docker-compose push')
 			   }
            /*
