--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -35,8 +35,8 @@ node {
            stage('Push'){
            	   dir('spring-boot'){
            	   	sh(script: 'docker login -u ${DOCKER_USER_ID} -p ${DOCKER_USER_PASSWORD}')
+			   	sh(script: 'docker-compose push app')
 			   	sh(script: 'docker-compose push tag')
-			   	sh(script: 'docker-compose push')
 			   }
            /*
            	   docker.withRegistry("https://registry.hub.docker.com", "dockerhub"){
