--- a/spring-boot/docker-compose.yml
+++ b/spring-boot/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     image: ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}
   tag:
+    build: .
     image: ${DOCKER_USER_ID}/spring-boot:latest
   production:
     image: ${DOCKER_USER_ID}/spring-boot
