--- a/spring-boot/Jenkinsfile
+++ b/spring-boot/Jenkinsfile
@@ -29,14 +29,14 @@ node {
 			   }
            }
            stage('Tag'){
-               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER} ${DOCKER_USER_ID}/spring-boot:latest')               
+               sh(script: 'docker tag ${DOCKER_USER_ID}/spring-boot ${DOCKER_USER_ID}/spring-boot:${BUILD_NUMBER}')               
            }
 
            stage('Push'){
            	   dir('spring-boot'){
            	   	sh(script: 'docker login -u ${DOCKER_USER_ID} -p ${DOCKER_USER_PASSWORD}')
 			   	sh(script: 'docker-compose push app')
-			   	sh(script: 'docker-compose push tag')
+			   	sh(script: 'docker push ${DOCKER_USER_ID}/spring-boot:latest')
 			   }
            /*
            	   docker.withRegistry("https://registry.hub.docker.com", "dockerhub"){
